--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,13 @@
 </head>
 <body>
     <p>Witaj w aplikacji czatu</p>
+    <ol id="messages"></ol>
+    <form id="message-form">
+        <input name="message" type="text" placeholder="Message">
+        <button>Wyślij</button>
+    </form>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="./js/index.js"></script>
+    <script src="/js/libs/jquery-3.3.1.min.js"></script>
+    <script src="/js/index.js"></script>
 </body>
 </html>
