--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,10 @@
     <p>Witaj w aplikacji czatu</p>
     <ol id="messages"></ol>
     <form id="message-form">
-        <input name="message" type="text" placeholder="Message">
+        <input name="message" type="text" placeholder="Wiadomość">
         <button>Wyślij</button>
     </form>
+    <button id="send-location">Wyślij lokalizację</button>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/libs/jquery-3.3.1.min.js"></script>
     <script src="/js/index.js"></script>
