--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
-<body>
-    <p>Witaj w aplikacji czatu</p>
-    <ol id="messages"></ol>
-    <form id="message-form">
-        <input name="message" type="text" placeholder="Wiadomość">
-        <button>Wyślij</button>
-    </form>
-    <button id="send-location">Wyślij lokalizację</button>
+<body class="chat">
+    <div class="chat__sidebar">
+        <h3>Użytkownicy</h3>
+        <div id="users"></div>
+    </div>
+
+    <div class="chat__main">
+        <ol id="messages" class="chat__messages"></ol>
+
+        <div class="chat__footer">
+            <form id="message-form">
+                <input name="message" type="text" placeholder="Wiadomość" autofocus autocomplete="off">
+                <button>Wyślij</button>
+            </form>
+            <button id="send-location">Wyślij lokalizację</button>
+        </div>
+    </div>
+
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/libs/jquery-3.3.1.min.js"></script>
     <script src="/js/index.js"></script>
